# ChangeLog for dev-python/matplotlib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.61 2009/02/28 21:18:57 bicatali Exp $

  28 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  files/matplotlib-0.98.5.2-no-xv.patch, matplotlib-0.98.5.2-r3.ebuild:
  More documentation building fixes: added graphviz dependency, and applied
  patch on doc examples instead of regular examples

  27 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/matplotlib-0.98.5.2-no-xv.patch, matplotlib-0.98.5.2-r3.ebuild:
  Added more dependencies to build documentation and a patch to avoid to
  launch xv during doc compilation when imaging is installed. Closing bug
  #260446 and bug #260431

*matplotlib-0.98.5.2-r3 (25 Feb 2009)

  25 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/matplotlib-0.98.5.2-literal.patch, +matplotlib-0.98.5.2-r3.ebuild:
  Re-added pyparsing (hopefully temporarily) for proper outputs and
  stix-fonts for ttf, but added media-fonts/texcm-ttf. More information on
  bundled packages, see bug #260025, thanks Michael Droettboom for
  explanations. Also now builds documentation from source (html and pdf),
  and added a src_test for regression. Finally added a small patch on string
  literal from Mandriva.

*matplotlib-0.98.5.2-r2 (25 Jan 2009)

  25 Jan 2009; Patrick Lauer <patrick@gentoo.org>
  +matplotlib-0.98.5.2-r2.ebuild:
  Fixing pyparsing dep, closes #256256

  21 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org>
  matplotlib-0.98.5.2.ebuild, matplotlib-0.98.5.2-r1.ebuild:
  Removed mirror restriction, now tar ball on mirrors

*matplotlib-0.98.5.2-r1 (15 Jan 2009)

  15 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -matplotlib-0.98.3.ebuild, matplotlib-0.98.5.2.ebuild,
  +matplotlib-0.98.5.2-r1.ebuild:
  Reorganized dependencies. Added enthought traits support, removed bundled
  pyparsing, pycxx (bug #252947) and fonts. Temporary mirror restricting