@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/matplotlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.61 2009/02/28 21:18:57 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.62 2009/03/09 11:05:30 bicatali Exp $
+
+  09 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
+  matplotlib-0.98.5.2-r3.ebuild:
+  Added latex-unicode for doc building when tetex or ptex are selected
 
   28 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
   files/matplotlib-0.98.5.2-no-xv.patch, matplotlib-0.98.5.2-r3.ebuild:
